added ordered list of fav movies/ unordered list of work and school history

--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
           <li>Buy/ Trading craft beer</li>
           <li>Kayaking</li>
       </ul>
+      <h2>Top 10 favorite movies</h2>
+      <ol>
+        <li>Guardians of the Galaxies</li>
+        <li>Rubber</li>
+        <li>Full Metal Jacket</li>
+        <li>Black Hawk Down</li>
+        <li>Zero Dark Thirty</li>
+        <li>Ready Player One</li>
+        <li>Avatar</li>
+        <li>Men in Black</li>
+        <li>Wolf of Wall Street</li>
+        <li>Platform</li>
+      </ol>
+      <h2>Work and School History</h2>
+      <ul>
+        <li>Winnebago</li>
+        <li>Kabrick Dist.</li>
+        <li>Charles City High School</li>
+        <li>NIACC</li>
+        <li>Hawkeye Community College</li>
+      </ul>
 
     </main>
     <footer>
