added a little more css

--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
   <body>  
     <header>
       <h1>Guessing game about me!</h1>
-      <section class="meImg">
-        <img src="img/me.JPG"/>
-        <h2>Christian Lievrouw</h2>
-      </section>
+      <h2>Christian Lievrouw</h2>
+      <nav>
+        <ul>
+          <li>Social Media</li>
+          <li><a href="mailto:celievrouw1@gmail.com">Email Me</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
+      <img src="img/me.JPG"/>
       <h2>A little about me</h2>
-      <p>I was born in Mason City, IA and raised in Charles City, IA. After graduating Charles City High School in 2011 I attended NIACC. During my first year of college I could not find an interest in anything so I decided to take a break from school and go find a job. For the next three years I did different jobs here and there mainly in factories. I was not happy with factory work so I gave college another try. I attended Hawkeye Community College in Waterloo, there I found an interest in computer science. A year later my first child was on his way so I once again took a break from college and got a job. In 2018 I figured out about DeltaV and was very interested in pursuing that opportunity. For the next two years I stayed in contact with Aaron Horn and got all of my things in order to where I was able to quit working and dedicate my time to the program. My goals for the end of DeltaV are to learn the skills i need to succeed in the coding job world and to land a career instead of just another job. My dream career would be a software developer for Apple.</p>
-        <ul class="column3">
-          <h2>Hobbies</h2>
-          <li>Riding Motorcycle</li>
-          <li>Drawing</li>
-          <li>Video Games</li>
-          <li>Buy/ Trading craft beer</li>
-          <li>Kayaking</li>
-      </ul>
+      <p>I was born in Mason City, IA and raised in Charles City, IA. After graduating Charles City High School in 2011 I attended NIACC. During my first year of college I could not find an interest in anything so I decided to take a break from school and go find a job. For the next three years I did different jobs here and there mainly in factories. I was not happy with factory work so I gave college another try. I attended Hawkeye Community College in Waterloo, there I found an interest in computer science. A year later my first child was on his way so I once again took a break from college and got a job. In 2018 I figured out about DeltaV and was very interested in pursuing that opportunity. For the next two years I stayed in contact with Aaron Horn and got all of my things in order to where I was able to quit working and dedicate my time to the program. My goals for the end of DeltaV are to learn the skills i need to succeed in the coding job world and to land a career instead of just another job. My dream career would be a software developer for Apple.</p> 
+      <div class="colBox">
+      <ul class="column3">
+        <h2>Hobbies</h2>
+        <li>Riding Motorcycle</li>
+        <li>Drawing</li>
+        <li>Video Games</li>
+        <li>Buy/ Trading craft beer</li>
+        <li>Kayaking</li>
+      </ul> 
+      </div>
       <ol class="column2">
         <h2>Top 10 favorite movies</h2>
         <li>Guardians of the Galaxies</li>
@@ -52,7 +58,7 @@
 
     </main>
     <footer>
-
+      <p>Thank you for exploring my first page created in 201! This first page was a great experience exploring html, css, and javascript.</p>
     </footer>
     <script src="js/app.js"></script>
   </body>
